@@ -7,6 +7,7 @@ and this project adheres to http://semver.org/[Semantic Versioning].
 
 === [UNRELEASED]
 ==== Added
+* Port enumeration is now supported on FreeBSD.
 
 ==== Changed
 * Minimum supported Rust version changed to 1.24.1
